@@ -16,6 +16,7 @@ importFrom(graphics,boxplot)
 importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(stats,complete.cases)
+importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,sd)
